small fixes